# cxxtracing

./: CMakeLists.txt  README.md
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  cxxtracing.cpp
src/include/cxxtracing/: ctracing.h  cxxtracing.h  cxxtracing_common.h
traces/: trace.json
